--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@formspree/react": "^2.5.1",
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@types/react": "18.3.3",
+    "eslint": "^9.8.0",
     "typescript": "5.5.4"
   }
 }
